--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
   "rewrites": [{ "source": "/api/(.*)", "destination": "/api/$1" }],
-  "functions": { "api/**/*.js": { "runtime": "nodejs18.x" } }
+  "functions": { "api/**/*.js": { "runtime": "nodejs22.17.1" } }
 }
